add JTL environment

--- a/config_exp_jtl.json
+++ b/config_exp_jtl.json
@@ -22,7 +22,7 @@
     "dont_normalize": false,
     "dont_normalize_obs": false,
     "ent_coef": 0.0,
-    "eval_env_id": "CSW-v0",
+    "eval_env_id": "CJTL-v0",
     "eval_every": 2048,
     "file_to_run": "cpg",
     "group": null,
@@ -30,7 +30,7 @@
     "max_grad_norm": 0.5,
     "n_epochs": 10,
     "n_steps": 2048,
-    "name": "SW-v0_CLGW-v0_tk_0.01_s_20_sid_0",
+    "name": "D2B-v0_CDD2B-v0_tk_0.01_s_20_sid_0",
     "num_threads": 1,
     "penalty_initial_value": 1,
     "penalty_learning_rate": 0.1,
@@ -48,14 +48,14 @@
         64,
         64
     ],
-    "save_every": 100000.0,
+    "save_every": 40000.0,
     "sde_sample_freq": -1,
     "seed": 20,
     "shared_layers": null,
     "sync_wandb": false,
     "target_kl": 0.01,
-    "timesteps": 1e5,
-    "train_env_id": "SW-v0",
+    "timesteps": 8e4,
+    "train_env_id": "JTL-v0",
     "update_penalty_after": 1,
     "use_curiosity_driven_exploration": false,
     "use_lambda_shaping": false,
