--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - pip=21.2.4=py39h06a4308_0
   - python=3.9.7=h12debd9_1
   - readline=8.1.2=h7f8727e_1
+  - setuptools=58.0.4=py39h06a4308_0
   - sqlite=3.38.0=hc218d9a_0
   - tk=8.6.11=h1ccaba5_0
   - tzdata=2021e=hda174b7_0
@@ -33,7 +34,6 @@ dependencies:
     - docker-pycreds==0.4.0
     - fast-histogram==0.10
     - fasteners==0.17.3
-    - fonttools==4.30.0
     - future==0.18.2
     - gitdb==4.0.9
     - gitpython==3.1.27
@@ -42,13 +42,10 @@ dependencies:
     - idna==3.3
     - imageio==2.16.1
     - kiwisolver==1.4.0
-    - lnn==1.0
     - matplotlib==3.3.2
     - mpl-scatter-density==0.7
     - mujoco-py==2.1.2.14
-    - networkx==2.7.1
-    - numpy==1.21.5
-    - packaging==21.3
+    - numpy==1.22.3
     - pandas==1.3.5
     - pillow==9.0.1
     - promise==2.3
@@ -56,16 +53,13 @@ dependencies:
     - psutil==5.9.0
     - pycparser==2.21
     - pyglet==1.5.0
-    - pygraphviz==1.9
     - pyparsing==3.0.7
     - python-dateutil==2.8.2
-    - python-graphviz==0.19.1
     - pytz==2021.3
     - pyyaml==6.0
     - requests==2.27.1
     - scipy==1.8.0
     - sentry-sdk==1.5.7
-    - setuptools==52.0.0
     - shortuuid==1.0.8
     - six==1.16.0
     - smmap==5.0.0
