--- a/icrl/expert_data/JTL/files/config.json
+++ b/icrl/expert_data/JTL/files/config.json
@@ -1,4 +1,4 @@
-{"batch_size"	:	128,
+{"batch_size"	:	64,
 "budget"	:	0.0,
 "clip_range"	:	0.2,
 "clip_range_cost_vf"	:	null,
@@ -28,14 +28,14 @@
 "file_to_run"	:	"cpg",
 "group"	:	null,
 "integral_control_coeff"	:	0.0001,
-"learning_rate"	:	0.0005,
+"learning_rate"	:	0.0003,
 "load_gail"	:	false,
 "max_grad_norm"	:	0.5,
 "message"	:	null,
 "n_epochs"	:	10,
 "n_steps"	:	2048,
 "name"	:	"D2B-v0_CDD2B-v0_tk_0.01_s_20_sid_0_s_20_sid_-1",
-"num_threads"	:	5,
+"num_threads"	:	1,
 "penalty_initial_value"	:	1,
 "penalty_learning_rate"	:	0.1,
 "pid_delay"	:	1,
@@ -51,14 +51,14 @@
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"./cpg/wandb/run-20220525_160552-2eploi6h/files",
-"save_every"	:	50000.0,
+"save_dir"	:	"./cpg/wandb/run-20220530_113954-25ehikdt/files",
+"save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
 "seed"	:	20,
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
-"timesteps"	:	2000000.0,
+"timesteps"	:	80000.0,
 "train_env_id"	:	"JTL-v0",
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
