--- a/config_icrl_jtl.json
+++ b/config_icrl_jtl.json
@@ -12,7 +12,7 @@
 "cn_layers"	:	[20],
 "cn_learning_rate"	:	0.003,
 "cn_normalize"	:	false,
-"cn_obs_select_dim"	:	null,
+"cn_obs_select_dim"	:	[2],
 "cn_plot_every"	:	1,
 "cn_reg_coeff"	:	0,
 "cn_target_kl_new_old"	:	10,
@@ -37,12 +37,11 @@
 "expert_rollouts"	:	20,
 "file_to_run"	:	"icrl",
 "forward_timesteps"	:	50000,
-"group"	:	"JTL-ICRL",
 "integral_control_coeff"	:	0.0001,
 "learning_rate"	:	0.0003,
 "max_grad_norm"	:	0.5,
 "n_epochs"	:	10,
-"n_iters"	:	20,
+"n_iters"	:	12,
 "n_steps"	:	2048,
 "no_importance_sampling"	:	false,
 "num_threads"	:	5,
@@ -53,7 +52,7 @@
 "policy_layers"	:	[64,
 64],
 "policy_name"	:	"TwoCriticsMlpPolicy",
-"project"	:	"ICRL-FE2",
+"project"	:	"icrl",
 "proportional_control_coeff"	:	10,
 "proportional_cost_ema_alpha"	:	0.5,
 "reset_policy"	:	false,
