--- a/icrl/expert_data/JTL/files/config.json
+++ b/icrl/expert_data/JTL/files/config.json
@@ -5,7 +5,12 @@
 "clip_range_reward_vf"	:	null,
 "cn_acs_select_dim"	:	null,
 "cn_device"	:	null,
-"cn_obs_select_dim"	:	null,
+"cn_obs_select_dim"	:	[2,
+3,
+4,
+5,
+6,
+7],
 "cn_path"	:	null,
 "cnn_features_dim"	:	512,
 "config_file"	:	"config_exp_jtl.json",
@@ -51,14 +56,14 @@
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"./cpg/wandb/run-20220531_140127-1bpf4m0q/files",
+"save_dir"	:	"./cpg/wandb/run-20220607_091057-2tlguotl/files",
 "save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
 "seed"	:	20,
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
-"timesteps"	:	80000.0,
+"timesteps"	:	200000.0,
 "train_env_id"	:	"JTL-v0",
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
