--- a/icrl/expert_data/JTL/files/requirements.txt
+++ b/icrl/expert_data/JTL/files/requirements.txt
@@ -1,4 +1,5 @@
 attrdict==2.0.1
+autopep8==1.6.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -31,6 +32,7 @@ pip==21.2.4
 promise==2.3
 protobuf==3.19.4
 psutil==5.9.0
+pycodestyle==2.8.0
 pycparser==2.21
 pyglet==1.5.0
 pyparsing==3.0.7
@@ -45,6 +47,7 @@ shortuuid==1.0.8
 six==1.16.0
 smmap==5.0.0
 subprocess32==3.5.4
+toml==0.10.2
 torch==1.5.0
 tqdm==4.62.3
 typing-extensions==3.10.0.0
