update config, add test script for LNN, add attention layer implementation (not tested)

--- a/config_exp_jtl.json
+++ b/config_exp_jtl.json
@@ -6,7 +6,7 @@
     "clip_range_reward_vf": null,
     "cn_acs_select_dim": null,
     "cn_device": null,
-    "cn_obs_select_dim": null,
+    "cn_obs_select_dim": [2,3,4,5,6,7],
     "cn_path": null,
     "cnn_features_dim": 512,
     "config_file": null,
@@ -54,7 +54,7 @@
     "shared_layers": null,
     "sync_wandb": false,
     "target_kl": 0.01,
-    "timesteps": 8e4,
+    "timesteps": 2e5,
     "train_env_id": "JTL-v0",
     "update_penalty_after": 1,
     "use_curiosity_driven_exploration": false,
