--- a/config_icrl_logic_jtl.json
+++ b/config_icrl_logic_jtl.json
@@ -6,11 +6,11 @@
 "clip_range"	:	0.2,
 "clip_range_cost_vf"	:	null,
 "clip_range_reward_vf"	:	null,
-"cn_acs_select_dim"	: [0,1,2,3],
-"cn_batch_size"	:	null,
+"cn_acs_select_dim"	:	[0,1,2,3],
+"cn_batch_size"	:	64,
 "cn_eps"	:	1e-05,
 "cn_layers"	:	[20],
-"cn_learning_rate"	:	0.003,
+"cn_learning_rate"	:	0.01,
 "cn_normalize"	:	false,
 "cn_obs_select_dim"	:	[2,3,4,5],
 "cn_plot_every"	:	1,
@@ -44,7 +44,7 @@
 "n_iters"	:	20,
 "n_steps"	:	2048,
 "no_importance_sampling"	:	false,
-"num_threads"	:	5,
+"num_threads"	:	1,
 "penalty_initial_value"	:	1,
 "penalty_learning_rate"	:	0.1,
 "per_step_importance_sampling"	:	false,
@@ -73,7 +73,7 @@
 "use_curiosity_driven_exploration"	:	false,
 "use_pid"	:	false,
 "use_sde"	:	false,
-"use_logical_net": false,
+"use_logical_net": true,
 "verbose"	:	2,
 "wandb_sweep"	:	false,
 "warmup_timesteps"	:	null}
