--- a/config_icrl_logic_jtl.json
+++ b/config_icrl_logic_jtl.json
@@ -7,12 +7,12 @@
 "clip_range_cost_vf"	:	null,
 "clip_range_reward_vf"	:	null,
 "cn_acs_select_dim"	:	[0,1,2,3],
-"cn_batch_size"	:	64,
+"cn_batch_size"	:	null,
 "cn_eps"	:	1e-05,
 "cn_layers"	:	[20],
 "cn_learning_rate"	:	0.01,
 "cn_normalize"	:	false,
-"cn_obs_select_dim"	:	[2,3,4,5],
+"cn_obs_select_dim"	:	[2,3,4,5,6],
 "cn_plot_every"	:	1,
 "cn_reg_coeff"	:	0,
 "cn_target_kl_new_old"	:	10,
@@ -41,7 +41,7 @@
 "learning_rate"	:	0.0003,
 "max_grad_norm"	:	0.5,
 "n_epochs"	:	10,
-"n_iters"	:	20,
+"n_iters"	:	10,
 "n_steps"	:	2048,
 "no_importance_sampling"	:	false,
 "num_threads"	:	5,
