- update state jtl environment (ego view) - add l1 loss to constraint net loss - simplified model - init weigths with 1.0 of logical constraint net - disabled importance sampling

--- a/config_exp_jtl.json
+++ b/config_exp_jtl.json
@@ -6,7 +6,7 @@
     "clip_range_reward_vf": null,
     "cn_acs_select_dim": null,
     "cn_device": null,
-    "cn_obs_select_dim": [2,3,4,5,6,7],
+    "cn_obs_select_dim": null,
     "cn_path": null,
     "cnn_features_dim": 512,
     "config_file": null,
@@ -31,7 +31,7 @@
     "n_epochs": 10,
     "n_steps": 2048,
     "name": "D2B-v0_CDD2B-v0_tk_0.01_s_20_sid_0",
-    "num_threads": 1,
+    "num_threads": 5,
     "penalty_initial_value": 1,
     "penalty_learning_rate": 0.1,
     "plot_every": 2048,
