--- a/icrl/expert_data/JTL/files/config.json
+++ b/icrl/expert_data/JTL/files/config.json
@@ -5,12 +5,7 @@
 "clip_range_reward_vf"	:	null,
 "cn_acs_select_dim"	:	null,
 "cn_device"	:	null,
-"cn_obs_select_dim"	:	[2,
-3,
-4,
-5,
-6,
-7],
+"cn_obs_select_dim"	:	null,
 "cn_path"	:	null,
 "cnn_features_dim"	:	512,
 "config_file"	:	"config_exp_jtl.json",
@@ -40,7 +35,7 @@
 "n_epochs"	:	10,
 "n_steps"	:	2048,
 "name"	:	"D2B-v0_CDD2B-v0_tk_0.01_s_20_sid_0_s_20_sid_-1",
-"num_threads"	:	1,
+"num_threads"	:	5,
 "penalty_initial_value"	:	1,
 "penalty_learning_rate"	:	0.1,
 "pid_delay"	:	1,
@@ -56,14 +51,14 @@
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"./cpg/wandb/run-20220609_114902-3pgm9js9/files",
+"save_dir"	:	"./cpg/wandb/run-20220613_133810-32ratmhy/files",
 "save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
 "seed"	:	20,
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
-"timesteps"	:	200000.0,
+"timesteps"	:	100000.0,
 "train_env_id"	:	"JTL-v0",
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
