--- a/config_icrl_jtl.json
+++ b/config_icrl_jtl.json
@@ -6,13 +6,13 @@
 "clip_range"	:	0.2,
 "clip_range_cost_vf"	:	null,
 "clip_range_reward_vf"	:	null,
-"cn_acs_select_dim"	: [0,1,2,3],
+"cn_acs_select_dim"	: null,
 "cn_batch_size"	:	null,
 "cn_eps"	:	1e-05,
 "cn_layers"	:	[20],
 "cn_learning_rate"	:	0.003,
 "cn_normalize"	:	false,
-"cn_obs_select_dim"	:	[2,3,4,5,6],
+"cn_obs_select_dim"	:	[3,4,5,6],
 "cn_plot_every"	:	1,
 "cn_reg_coeff"	:	0,
 "cn_target_kl_new_old"	:	10,
