--- a/config_icrl_logic_jtl.json
+++ b/config_icrl_logic_jtl.json
@@ -9,12 +9,13 @@
 "cn_acs_select_dim"	:	[0,1,2,3],
 "cn_batch_size"	:	null,
 "cn_eps"	:	1e-05,
+"cn_l1_coeff" : 0.001,
 "cn_layers"	:	[20],
 "cn_learning_rate"	:	0.01,
 "cn_normalize"	:	false,
-"cn_obs_select_dim"	:	[2,3,4,5,6],
+"cn_obs_select_dim"	:	[3,4,5,6],
 "cn_plot_every"	:	1,
-"cn_reg_coeff"	:	0,
+"cn_reg_coeff"	:	0.005,
 "cn_target_kl_new_old"	:	10,
 "cn_target_kl_old_new"	:	10,
 "config_file"	:	null,
@@ -42,9 +43,9 @@
 "learning_rate"	:	0.0003,
 "max_grad_norm"	:	0.5,
 "n_epochs"	:	10,
-"n_iters"	:	5,
+"n_iters"	:	10,
 "n_steps"	:	2048,
-"no_importance_sampling"	:	false,
+"no_importance_sampling"	:	true,
 "num_threads"	:	5,
 "penalty_initial_value"	:	1,
 "penalty_learning_rate"	:	0.1,
