--- a/icrl/expert_data/JTL/files/requirements.txt
+++ b/icrl/expert_data/JTL/files/requirements.txt
@@ -7,9 +7,11 @@ click==8.0.3
 clingo==5.5.0.post3
 cloudpickle==1.2.2
 configparser==5.2.0
+cryptography==3.4.8
 custom-envs==0.0.1
 cycler==0.11.0
 cython==0.29.27
+dataclass-dict-convert==1.7.0
 docker-pycreds==0.4.0
 fast-histogram==0.10
 fasteners==0.17.3
@@ -21,6 +23,9 @@ glfw==2.5.0
 gym==0.15.7
 idna==3.3
 imageio==2.16.0
+imecilabt-gpulab-cli==3.6.0
+imecilabt-gpulab-common==4.0.0
+imecilabt-utils==1.5.0
 kiwisolver==1.3.2
 matplotlib==3.3.2
 mpl-scatter-density==0.7
@@ -46,6 +51,8 @@ setuptools==58.0.4
 shortuuid==1.0.8
 six==1.16.0
 smmap==5.0.0
+snakecase==1.0.1
+stringcase==1.2.0
 subprocess32==3.5.4
 toml==0.10.2
 torch==1.5.0
