junction_traffic_light_env: - add traffic light - reset to single goal - always normalize - render orientation - update apply action update config_exp_jtl.json custom_envs/utils: - update in_region function (gridworld) - add in_state_action_pair - add draw_triangle cpg.py: use config.deterministic true_constraint_net.py: check for running red ligths icrl/utils.py: do not use VecNormalize Evn (temporary)

--- a/icrl/expert_data/JTL/files/config.json
+++ b/icrl/expert_data/JTL/files/config.json
@@ -17,6 +17,7 @@
 64],
 "derivative_control_coeff"	:	0,
 "derivative_cost_ema_alpha"	:	0.5,
+"deterministic"	:	false,
 "device"	:	"cpu",
 "dont_normalize"	:	false,
 "dont_normalize_cost"	:	false,
@@ -34,7 +35,7 @@
 "message"	:	null,
 "n_epochs"	:	10,
 "n_steps"	:	2048,
-"name"	:	"D2B-v0_CDD2B-v0_tk_0.01_s_20_sid_0_s_20_sid_-1",
+"name"	:	"JTL-v0_CJTL-v0_s_20_sid_-1",
 "num_threads"	:	5,
 "penalty_initial_value"	:	1,
 "penalty_learning_rate"	:	0.1,
@@ -51,14 +52,14 @@
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"./cpg/wandb/run-20220621_103331-3vlh9ls9/files",
+"save_dir"	:	"./cpg/wandb/run-20220627_121126-38m5sron/files",
 "save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
 "seed"	:	20,
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
-"timesteps"	:	100000.0,
+"timesteps"	:	3000000,
 "train_env_id"	:	"JTL-v0",
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
