--- a/config_exp_jtl.json
+++ b/config_exp_jtl.json
@@ -9,7 +9,6 @@
     "cn_obs_select_dim": null,
     "cn_path": null,
     "cnn_features_dim": 512,
-    "config_file": null,
     "cost_gae_lambda": 0.95,
     "cost_gamma": 0.99,
     "cost_info_str": "cost",
@@ -18,22 +17,30 @@
         64,
         64
     ],
+    "derivative_control_coeff": 0,
+    "derivative_cost_ema_alpha": 0.5,
+    "deterministic": false,
     "device": "cpu",
     "dont_normalize": false,
+    "dont_normalize_cost": false,
     "dont_normalize_obs": false,
+    "dont_normalize_reward": false,
     "ent_coef": 0.0,
     "eval_env_id": "CJTL-v0",
     "eval_every": 2048,
     "file_to_run": "cpg",
     "group": null,
+    "integral_control_coeff": 0.0001,
     "learning_rate": 0.0003,
+    "load_gail": false,
     "max_grad_norm": 0.5,
+    "message": null,
     "n_epochs": 10,
     "n_steps": 2048,
-    "name": "D2B-v0_CDD2B-v0_tk_0.01_s_20_sid_0",
     "num_threads": 5,
     "penalty_initial_value": 1,
     "penalty_learning_rate": 0.1,
+    "pid_delay": 1,
     "plot_every": 2048,
     "policy_layers": [
         64,
@@ -41,6 +48,8 @@
     ],
     "policy_name": "TwoCriticsMlpPolicy",
     "project": "CPG-2",
+    "proportional_control_coeff": 10,
+    "proportional_cost_ema_alpha": 0.5,
     "reward_gae_lambda": 0.95,
     "reward_gamma": 0.99,
     "reward_vf_coef": 0.5,
@@ -48,13 +57,13 @@
         64,
         64
     ],
-    "save_every": 40000.0,
+    "save_every": 4e4,
     "sde_sample_freq": -1,
     "seed": 20,
     "shared_layers": null,
     "sync_wandb": false,
     "target_kl": 0.01,
-    "timesteps": 1e5,
+    "timesteps": 400000.0,
     "train_env_id": "JTL-v0",
     "update_penalty_after": 1,
     "use_curiosity_driven_exploration": false,
