update expert trajectories

--- a/icrl/expert_data/JTL/files/config.json
+++ b/icrl/expert_data/JTL/files/config.json
@@ -27,6 +27,7 @@
 "eval_env_id"	:	"CJTL-v0",
 "eval_every"	:	2048,
 "file_to_run"	:	"cpg",
+"goal"	:	0,
 "group"	:	null,
 "integral_control_coeff"	:	0.0001,
 "learning_rate"	:	0.0003,
@@ -35,7 +36,8 @@
 "message"	:	null,
 "n_epochs"	:	10,
 "n_steps"	:	2048,
-"name"	:	"JTL-v0_CJTL-v0_dnc_True_dno_True_dnr_True_ws_True_s_20_sid_-1",
+"name"	:	"JTL-v0_CJTL-v0_dnc_True_dno_True_dnr_True_goal_0_ws_True_s_20_sid_-1",
+"num_curriculum_updates"	:	0,
 "num_threads"	:	5,
 "penalty_initial_value"	:	1,
 "penalty_learning_rate"	:	0.1,
@@ -52,14 +54,14 @@
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"/tmp/wandb/run-20220627_200623-3tk3hyba/files",
+"save_dir"	:	"/tmp/wandb/run-20220629_123755-1ouxm0ba/files",
 "save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
 "seed"	:	20,
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
-"timesteps"	:	5000000,
+"timesteps"	:	400000,
 "train_env_id"	:	"JTL-v0",
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
