update expert rollouts

--- a/icrl/expert_data/JTL/files/config.json
+++ b/icrl/expert_data/JTL/files/config.json
@@ -54,14 +54,14 @@
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"/tmp/wandb/run-20220629_123755-1ouxm0ba/files",
+"save_dir"	:	"/tmp/wandb/run-20220630_045243-24nr5sjr/files",
 "save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
 "seed"	:	20,
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
-"timesteps"	:	400000,
+"timesteps"	:	1000000,
 "train_env_id"	:	"JTL-v0",
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
