--- a/icrl/expert_data/JTL/files/config.json
+++ b/icrl/expert_data/JTL/files/config.json
@@ -1,31 +1,14 @@
-{"anneal_clr_by_factor"	:	1.0,
-"backward_iters"	:	20,
-"batch_size"	:	64,
+{"batch_size"	:	64,
 "budget"	:	0.0,
-"clip_obs"	:	20,
 "clip_range"	:	0.2,
 "clip_range_cost_vf"	:	null,
 "clip_range_reward_vf"	:	null,
 "cn_acs_select_dim"	:	null,
-"cn_batch_size"	:	null,
-"cn_eps"	:	1e-05,
-"cn_l1_coeff"	:	0.0,
-"cn_l2_coeff"	:	0.0,
-"cn_layers"	:	[20],
-"cn_learning_rate"	:	0.003,
-"cn_normalize"	:	false,
-"cn_obs_select_dim"	:	[5,
-6,
-7,
-8,
-9],
-"cn_plot_every"	:	1,
-"cn_reg_coeff"	:	0,
-"cn_target_kl_new_old"	:	10,
-"cn_target_kl_old_new"	:	10,
-"cn_temp"	:	1.0,
-"cn_temp_delta"	:	0.0,
-"config_file"	:	"config_icrl_jtl.json",
+"cn_device"	:	null,
+"cn_obs_select_dim"	:	null,
+"cn_path"	:	null,
+"cnn_features_dim"	:	512,
+"config_file"	:	"config_exp_jtl.json",
 "cost_gae_lambda"	:	0.95,
 "cost_gamma"	:	0.99,
 "cost_info_str"	:	"cost",
@@ -36,57 +19,55 @@
 "derivative_cost_ema_alpha"	:	0.5,
 "deterministic"	:	false,
 "device"	:	"cpu",
+"dont_normalize"	:	false,
 "dont_normalize_cost"	:	true,
 "dont_normalize_obs"	:	true,
 "dont_normalize_reward"	:	true,
 "ent_coef"	:	0.0,
 "eval_env_id"	:	"CJTL-v0",
 "eval_every"	:	2048,
-"expert_path"	:	"icrl/expert_data/JTL",
-"expert_rollouts"	:	20,
-"file_to_run"	:	"icrl",
-"forward_timesteps"	:	50000,
+"file_to_run"	:	"cpg",
+"goal"	:	0,
 "group"	:	null,
 "integral_control_coeff"	:	0.0001,
 "learning_rate"	:	0.0003,
+"load_gail"	:	false,
 "max_grad_norm"	:	0.5,
+"message"	:	null,
 "n_epochs"	:	10,
-"n_iters"	:	80,
 "n_steps"	:	2048,
-"name"	:	"JTL-v0_CJTL-v0_dnc_True_dno_True_dnr_True_ws_True_s_83_sid_-1",
-"no_importance_sampling"	:	false,
+"name"	:	"JTL-v0_CJTL-v0_dnc_True_dno_True_dnr_True_goal_0_ws_True_s_20_sid_-1",
+"num_curriculum_updates"	:	0,
 "num_threads"	:	5,
 "penalty_initial_value"	:	1,
 "penalty_learning_rate"	:	0.1,
-"per_step_importance_sampling"	:	false,
 "pid_delay"	:	1,
+"plot_every"	:	2048,
 "policy_layers"	:	[64,
 64],
 "policy_name"	:	"TwoCriticsMlpPolicy",
-"project"	:	"icrl",
+"project"	:	"CPG-2",
 "proportional_control_coeff"	:	10,
 "proportional_cost_ema_alpha"	:	0.5,
-"red_light_prob"	:	-1,
-"reset_policy"	:	false,
 "reward_gae_lambda"	:	0.95,
 "reward_gamma"	:	0.99,
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"./icrl/wandb/run-20220630_101333-20kq29ev/files",
-"save_every"	:	1,
+"save_dir"	:	"/tmp/wandb/run-20220630_045243-24nr5sjr/files",
+"save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
-"seed"	:	83,
+"seed"	:	20,
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
+"timesteps"	:	1000000,
 "train_env_id"	:	"JTL-v0",
-"train_gail_lambda"	:	false,
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
-"use_logical_net"	:	false,
+"use_lambda_shaping"	:	false,
+"use_null_cost"	:	false,
 "use_pid"	:	false,
 "use_sde"	:	false,
 "verbose"	:	2,
-"wandb_sweep"	:	true,
-"warmup_timesteps"	:	null}
+"wandb_sweep"	:	true}
