--- a/icrl/expert_data/JTL/files/config.yaml
+++ b/icrl/expert_data/JTL/files/config.yaml
@@ -8,7 +8,7 @@ _wandb:
     is_jupyter_run: false
     is_kaggle_kernel: false
     python_version: 3.8.13
-    start_time: 1656584013
+    start_time: 1656564763
     t:
       1:
       - 1
@@ -24,21 +24,12 @@ _wandb:
       5: 0.12.20
       8:
       - 5
-anneal_clr_by_factor:
-  desc: null
-  value: 1.0
-backward_iters:
-  desc: null
-  value: 20
 batch_size:
   desc: null
   value: 64
 budget:
   desc: null
   value: 0.0
-clip_obs:
-  desc: null
-  value: 20
 clip_range:
   desc: null
   value: 0.2
@@ -51,57 +42,21 @@ clip_range_reward_vf:
 cn_acs_select_dim:
   desc: null
   value: null
-cn_batch_size:
+cn_device:
   desc: null
   value: null
-cn_eps:
-  desc: null
-  value: 1.0e-05
-cn_l1_coeff:
-  desc: null
-  value: 0.0
-cn_l2_coeff:
-  desc: null
-  value: 0.0
-cn_layers:
-  desc: null
-  value:
-  - 20
-cn_learning_rate:
-  desc: null
-  value: 0.003
-cn_normalize:
-  desc: null
-  value: false
 cn_obs_select_dim:
   desc: null
-  value:
-  - 5
-  - 6
-  - 7
-  - 8
-  - 9
-cn_plot_every:
+  value: null
+cn_path:
   desc: null
-  value: 1
-cn_reg_coeff:
+  value: null
+cnn_features_dim:
   desc: null
-  value: 0
-cn_target_kl_new_old:
-  desc: null
-  value: 10
-cn_target_kl_old_new:
-  desc: null
-  value: 10
-cn_temp:
-  desc: null
-  value: 1.0
-cn_temp_delta:
-  desc: null
-  value: 0.0
+  value: 512
 config_file:
   desc: null
-  value: config_icrl_jtl.json
+  value: config_exp_jtl.json
 cost_gae_lambda:
   desc: null
   value: 0.95
@@ -131,6 +86,9 @@ deterministic:
 device:
   desc: null
   value: cpu
+dont_normalize:
+  desc: null
+  value: false
 dont_normalize_cost:
   desc: null
   value: true
@@ -149,18 +107,12 @@ eval_env_id:
 eval_every:
   desc: null
   value: 2048
-expert_path:
-  desc: null
-  value: icrl/expert_data/JTL
-expert_rollouts:
-  desc: null
-  value: 20
 file_to_run:
   desc: null
-  value: icrl
-forward_timesteps:
+  value: cpg
+goal:
   desc: null
-  value: 50000
+  value: 0
 group:
   desc: null
   value: null
@@ -170,24 +122,27 @@ integral_control_coeff:
 learning_rate:
   desc: null
   value: 0.0003
+load_gail:
+  desc: null
+  value: false
 max_grad_norm:
   desc: null
   value: 0.5
+message:
+  desc: null
+  value: null
 n_epochs:
   desc: null
   value: 10
-n_iters:
-  desc: null
-  value: 80
 n_steps:
   desc: null
   value: 2048
 name:
   desc: null
-  value: JTL-v0_CJTL-v0_dnc_True_dno_True_dnr_True_ws_True_s_83_sid_-1
-no_importance_sampling:
+  value: JTL-v0_CJTL-v0_dnc_True_dno_True_dnr_True_goal_0_ws_True_s_20_sid_-1
+num_curriculum_updates:
   desc: null
-  value: false
+  value: 0
 num_threads:
   desc: null
   value: 5
@@ -197,12 +152,12 @@ penalty_initial_value:
 penalty_learning_rate:
   desc: null
   value: 0.1
-per_step_importance_sampling:
-  desc: null
-  value: false
 pid_delay:
   desc: null
   value: 1
+plot_every:
+  desc: null
+  value: 2048
 policy_layers:
   desc: null
   value:
@@ -213,19 +168,13 @@ policy_name:
   value: TwoCriticsMlpPolicy
 project:
   desc: null
-  value: icrl
+  value: CPG-2
 proportional_control_coeff:
   desc: null
   value: 10
 proportional_cost_ema_alpha:
   desc: null
   value: 0.5
-red_light_prob:
-  desc: null
-  value: -1
-reset_policy:
-  desc: null
-  value: false
 reward_gae_lambda:
   desc: null
   value: 0.95
@@ -242,16 +191,16 @@ reward_vf_layers:
   - 64
 save_dir:
   desc: null
-  value: ./icrl/wandb/run-20220630_101333-20kq29ev/files
+  value: /tmp/wandb/run-20220630_045243-24nr5sjr/files
 save_every:
   desc: null
-  value: 1
+  value: 40000.0
 sde_sample_freq:
   desc: null
   value: -1
 seed:
   desc: null
-  value: 83
+  value: 20
 shared_layers:
   desc: null
   value: null
@@ -261,19 +210,22 @@ sync_wandb:
 target_kl:
   desc: null
   value: 0.01
+timesteps:
+  desc: null
+  value: 1000000
 train_env_id:
   desc: null
   value: JTL-v0
-train_gail_lambda:
-  desc: null
-  value: false
 update_penalty_after:
   desc: null
   value: 1
 use_curiosity_driven_exploration:
   desc: null
   value: false
-use_logical_net:
+use_lambda_shaping:
+  desc: null
+  value: false
+use_null_cost:
   desc: null
   value: false
 use_pid:
@@ -288,6 +240,3 @@ verbose:
 wandb_sweep:
   desc: null
   value: true
-warmup_timesteps:
-  desc: null
-  value: null
