--- a/icrl/expert_data/JTL_/files/config.json
+++ b/icrl/expert_data/JTL_/files/config.json
@@ -14,11 +14,7 @@
 "cn_layers"	:	[20],
 "cn_learning_rate"	:	0.003,
 "cn_normalize"	:	false,
-"cn_obs_select_dim"	:	[5,
-6,
-7,
-8,
-9],
+"cn_obs_select_dim"	:	null,
 "cn_plot_every"	:	1,
 "cn_reg_coeff"	:	0,
 "cn_target_kl_new_old"	:	10,
@@ -36,9 +32,9 @@
 "derivative_cost_ema_alpha"	:	0.5,
 "deterministic"	:	false,
 "device"	:	"cpu",
-"dont_normalize_cost"	:	true,
+"dont_normalize_cost"	:	false,
 "dont_normalize_obs"	:	true,
-"dont_normalize_reward"	:	true,
+"dont_normalize_reward"	:	false,
 "ent_coef"	:	0.0,
 "eval_env_id"	:	"CJTL-v0",
 "eval_every"	:	2048,
@@ -51,13 +47,13 @@
 "learning_rate"	:	0.0003,
 "max_grad_norm"	:	0.5,
 "n_epochs"	:	10,
-"n_iters"	:	40,
+"n_iters"	:	50,
 "n_steps"	:	2048,
-"name"	:	"JTL-v0_CJTL-v0_dnc_True_dno_True_dnr_True_ws_True_s_83_sid_-1",
+"name"	:	"JTL-v0_CJTL-v0_dno_True_plr_0.2_ws_True_s_83_sid_-1",
 "no_importance_sampling"	:	false,
 "num_threads"	:	5,
 "penalty_initial_value"	:	1,
-"penalty_learning_rate"	:	0.1,
+"penalty_learning_rate"	:	0.2,
 "per_step_importance_sampling"	:	false,
 "pid_delay"	:	1,
 "policy_layers"	:	[64,
@@ -73,7 +69,7 @@
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"./icrl/wandb/run-20220630_100611-1qi774vp/files",
+"save_dir"	:	"./icrl/wandb/run-20220705_134007-1qht0j8h/files",
 "save_every"	:	1,
 "sde_sample_freq"	:	-1,
 "seed"	:	83,
