update expert data

--- a/icrl/expert_data/JTL/files/config.json
+++ b/icrl/expert_data/JTL/files/config.json
@@ -49,12 +49,13 @@
 "project"	:	"CPG-2",
 "proportional_control_coeff"	:	10,
 "proportional_cost_ema_alpha"	:	0.5,
+"red_light_prob"	:	-1,
 "reward_gae_lambda"	:	0.95,
 "reward_gamma"	:	0.99,
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"/tmp/wandb/run-20220630_045243-24nr5sjr/files",
+"save_dir"	:	"/tmp/wandb/run-20220706_080523-157hc4m4/files",
 "save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
 "seed"	:	20,
