--- a/icrl/expert_data/JTL/files/config.yaml
+++ b/icrl/expert_data/JTL/files/config.yaml
@@ -3,12 +3,12 @@ wandb_version: 1
 _wandb:
   desc: null
   value:
-    cli_version: 0.12.20
+    cli_version: 0.12.21
     framework: torch
     is_jupyter_run: false
     is_kaggle_kernel: false
     python_version: 3.8.13
-    start_time: 1656564763
+    start_time: 1657094723
     t:
       1:
       - 1
@@ -21,7 +21,7 @@ _wandb:
       - 16
       - 19
       4: 3.8.13
-      5: 0.12.20
+      5: 0.12.21
       8:
       - 5
 batch_size:
@@ -175,6 +175,9 @@ proportional_control_coeff:
 proportional_cost_ema_alpha:
   desc: null
   value: 0.5
+red_light_prob:
+  desc: null
+  value: -1
 reward_gae_lambda:
   desc: null
   value: 0.95
@@ -191,7 +194,7 @@ reward_vf_layers:
   - 64
 save_dir:
   desc: null
-  value: /tmp/wandb/run-20220630_045243-24nr5sjr/files
+  value: /tmp/wandb/run-20220706_080523-157hc4m4/files
 save_every:
   desc: null
   value: 40000.0
