--- a/icrl/expert_data/JTL_/files/config.yaml
+++ b/icrl/expert_data/JTL_/files/config.yaml
@@ -3,12 +3,12 @@ wandb_version: 1
 _wandb:
   desc: null
   value:
-    cli_version: 0.12.20
+    cli_version: 0.12.21
     framework: torch
     is_jupyter_run: false
     is_kaggle_kernel: false
     python_version: 3.8.13
-    start_time: 1657028407
+    start_time: 1657101734
     t:
       1:
       - 1
@@ -21,7 +21,7 @@ _wandb:
       - 16
       - 19
       4: 3.8.13
-      5: 0.12.20
+      5: 0.12.21
       8:
       - 5
 anneal_clr_by_factor:
@@ -128,13 +128,13 @@ device:
   value: cpu
 dont_normalize_cost:
   desc: null
-  value: false
+  value: true
 dont_normalize_obs:
   desc: null
   value: true
 dont_normalize_reward:
   desc: null
-  value: false
+  value: true
 ent_coef:
   desc: null
   value: 0.0
@@ -173,13 +173,13 @@ n_epochs:
   value: 10
 n_iters:
   desc: null
-  value: 50
+  value: 20
 n_steps:
   desc: null
   value: 2048
 name:
   desc: null
-  value: JTL-v0_CJTL-v0_dno_True_plr_0.2_ws_True_s_83_sid_-1
+  value: JTL-v0_CJTL-v0_dnc_True_dno_True_dnr_True_ws_True_s_83_sid_-1
 no_importance_sampling:
   desc: null
   value: false
@@ -191,7 +191,7 @@ penalty_initial_value:
   value: 1
 penalty_learning_rate:
   desc: null
-  value: 0.2
+  value: 0.1
 per_step_importance_sampling:
   desc: null
   value: false
@@ -237,7 +237,7 @@ reward_vf_layers:
   - 64
 save_dir:
   desc: null
-  value: ./icrl/wandb/run-20220705_134007-1qht0j8h/files
+  value: ./icrl/wandb/run-20220706_100214-tep990fo/files
 save_every:
   desc: null
   value: 1
