add config for new envs

--- a/config_icrl_t.json
+++ b/config_icrl_t.json
@@ -31,9 +31,9 @@
 "dont_normalize_obs"	:	false,
 "dont_normalize_reward"	:	false,
 "ent_coef"	:	0.0,
-"eval_env_id"	:	"CRG-v0",
+"eval_env_id"	:	"CT-v0",
 "eval_every"	:	2048,
-"expert_path"	:	"icrl/expert_data/RG",
+"expert_path"	:	"icrl/expert_data/T",
 "expert_rollouts"	:	20,
 "file_to_run"	:	"icrl",
 "forward_timesteps"	:	50000,
@@ -52,7 +52,7 @@
 "policy_layers"	:	[64,
 64],
 "policy_name"	:	"TwoCriticsMlpPolicy",
-"project"	:	"icrl-rg",
+"project"	:	"icrl-t",
 "proportional_control_coeff"	:	10,
 "proportional_cost_ema_alpha"	:	0.5,
 "reset_policy"	:	false,
@@ -67,7 +67,7 @@
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
-"train_env_id"	:	"RG-v0",
+"train_env_id"	:	"T-v0",
 "train_gail_lambda"	:	false,
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
