update expert data + test env

--- a/icrl/expert_data/T/files/config.json
+++ b/icrl/expert_data/T/files/config.json
@@ -30,13 +30,13 @@
 "goal"	:	-1,
 "group"	:	null,
 "integral_control_coeff"	:	0.0001,
-"learning_rate"	:	0.0003,
+"learning_rate"	:	5e-05,
 "load_gail"	:	false,
 "max_grad_norm"	:	0.5,
 "message"	:	null,
 "n_epochs"	:	10,
 "n_steps"	:	2048,
-"name"	:	"T-v0_CT-v0_dnc_True_dno_True_dnr_True_s_20_sid_-1",
+"name"	:	"T-v0_CT-v0_dnc_True_dno_True_dnr_True_lr_5e-05_s_20_sid_-1",
 "num_curriculum_updates"	:	0,
 "num_threads"	:	5,
 "penalty_initial_value"	:	1,
@@ -55,14 +55,14 @@
 "reward_vf_coef"	:	0.5,
 "reward_vf_layers"	:	[64,
 64],
-"save_dir"	:	"./cpg/wandb/run-20220714_144259-3x6nf6cu/files",
+"save_dir"	:	"./cpg/wandb/run-20220715_093804-1ewrsauu/files",
 "save_every"	:	40000.0,
 "sde_sample_freq"	:	-1,
 "seed"	:	20,
 "shared_layers"	:	null,
 "sync_wandb"	:	false,
 "target_kl"	:	0.01,
-"timesteps"	:	200000,
+"timesteps"	:	400000,
 "train_env_id"	:	"T-v0",
 "update_penalty_after"	:	1,
 "use_curiosity_driven_exploration"	:	false,
